bases/apps/beancount/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fava
spec:
  selector:
    matchLabels:
      app: fava
  template:
    metadata:
      labels:
        app: fava
    spec:
      containers:
      - image: yegle/fava:v1.27
        imagePullPolicy: IfNotPresent
        name: fava
        command: ["fava"]
        args: ["/bean/journal.beancount", "-p", "5000"]
        ports:
        - containerPort: 5000
          protocol: TCP
          name: http
        volumeMounts:
        - name: data
          mountPath: /bean
      restartPolicy: Always
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: fava-data
